feat: add getEndpointsByTag to SecureEndpointsConfiguration (#1419)
* Add getEndpointsByTag
* Update Javadocs to explain more about single vs multiple tags,
domains, etc.

Closes #1418